tests/ui/stubbing/missing-stubbing-flag/stub_verified_missing_flag.expected
error: Using the stub_verified attribute requires activating the unstable `stubbing` feature\
stub_verified_missing_flag\
|\
| #[kani::stub_verified(some_function)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error